# subtitle-correction

./: .gitignore  README.md  active_learning_loop.py  annotate_ground_truths.py  config.yaml  download_multilingual_subtitles.py  generate_multilingual_tts_data.py  generate_targeted_synthetics.py  pyproject.toml  run_epochs.sh  sonar-project.properties
.github/workflows/: ci.yml  code-review.yml  disable-sonar-aa-v2.yml  disable-sonar-aa-v3.yml  disable-sonar-aa.yml  fallow.yml  set-sonar-token.yml  sonarqube.yml
subtitle_correction/: __init__.py  align.py  alignment_quality.py  cache.py  cli.py  evaluate.py  formatter.py  hallucination_filter.py  inference.py  lang_detect.py  models.py  parser.py  pipeline.py  prepare_data.py  prompts.py  reference_free.py  scraper.py  srt_from_reference.py  train.py  translation_models.py
tests/: conftest.py  test_align.py  test_alignment_quality.py  test_cache.py  test_cli.py  test_evaluate.py  test_formatter.py  test_hallucination_filter.py  test_inference.py  test_lang_detect.py  test_models.py  test_parser.py  test_pipeline.py  test_prepare_data.py  test_prompts.py  test_reference_free.py  test_reference_free_extra.py  test_scraper.py  test_srt_from_reference.py  test_srt_from_reference_extra.py  test_train.py  test_translation_models.py
