[project]
name = "subtitle-correction"
version = "0.1.0"
description = "Unified subtitle correction toolkit: scraping, aligning, filtering, fine-tuning, and evaluating"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=14",
    "pysrt>=1.1",
    "requests>=2.31",
    "guessit>=3.8",
    "mlx-lm>=0.23",
    "mlx-audio>=0.4",
    "langdetect>=1.0",
]

[project.scripts]
subtitle-correction = "subtitle_correction.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=subtitle_correction --cov-branch --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["subtitle_correction"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"
